feat: setting project to JDK16 for better compatibility